--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,6 +9,9 @@ contourpy==1.2.1
 crashtest==0.3.1
 cycler==0.12.1
 Django==5.0.6
+django-filter==24.2
+djangorestframework==3.15.1
+drf-yasg==1.21.7
 Faker==25.6.0
 fonttools==4.53.0
 frozenlist==1.4.1
@@ -16,8 +19,10 @@ holidays==0.50
 httpstan==4.12.0
 idna==3.7
 importlib_resources==6.4.0
+inflection==0.5.1
 joblib==1.4.2
 kiwisolver==1.4.5
+Markdown==3.6
 marshmallow==3.21.3
 matplotlib==3.9.0
 multidict==6.0.5
@@ -34,6 +39,7 @@ pysimdjson==6.0.2
 pystan==3.9.1
 python-dateutil==2.9.0.post0
 pytz==2024.1
+PyYAML==6.0.1
 scikit-learn==1.5.0
 scipy==1.13.1
 six==1.16.0
@@ -43,5 +49,6 @@ statsmodels==0.14.2
 threadpoolctl==3.5.0
 tqdm==4.66.4
 tzdata==2024.1
+uritemplate==4.1.1
 webargs==8.4.0
 yarl==1.9.4
